# ai-reply-index

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: good-first-issue-1.md  good-first-issue-2.md
.github/workflows/: pr-labeler.yml
app/: README-app.md  README.md  main.py
app/assets/: style.qss
app/db/: db_manager.py  schema.sql
app/services/: config.py  file_manager.py  model_registry.py  model_service.py  prompt_service.py
app/ui/: browse_tab.py  main_window.py  new_entry_tab.py
data/: config.json  model_tags.json  prompt_index.db
prompts/2025-04-19_i_am_trying_to_search_for_ai_related_key/: Gemini.md  metadata.json  prompt.md
prompts/2025-04-19_there_are_a_lot_of_fake_websites_and_res/: Gemini.md  metadata.json  prompt.md
prompts/2025-05-01_i_want_to_create_a_prompt_database._but/: Gemini.md  metadata.json  prompt.md
prompts/2025-05-02_i_want_to_create_a_prompt_database._but/: ChatGPT.md  metadata.json  prompt.md  raw.chatgpt.md
prompts/2025-05-02_using_as_a_reference_come_up_with_a_proo/: Gemini.md  metadata.json  prompt.md
prompts/2025-05-05_i_am_trying_to_create_a_custom_hardware/: ChatGPT.md  metadata.json  prompt.md
prompts/2025-05-08_i_am_trying_to_create_a_custom_hardware/: ChatGPT.md  Gemini.md  metadata.json
prompts/2025-05-09_i_want_to_learn_generative_ai,_can_you_c/: ChatGPT.md  metadata.json  prompt.md
prompts/2025-05-10_**architecting_verifiably_aligned_and_sa/: ChatGPT.md  metadata.json  prompt.md
scripts/: export_static_site.py  migrate_to_db.py
(+63 files in other folders)
